# tiny-wasm-runtime

./: Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/setup/: action.yaml
.github/workflows/: ci.yaml
src/: binary.rs  execution.rs  lib.rs  main.rs
src/binary/: instruction.rs  mod.rs  module.rs  opcode.rs  section.rs  types.rs
src/binary/snapshots/: miniwasm__binary__module__tests__decode_call_func.snap  miniwasm__binary__module__tests__decode_data.snap  miniwasm__binary__module__tests__decode_export.snap  miniwasm__binary__module__tests__decode_fib.snap  miniwasm__binary__module__tests__decode_func_local.snap  miniwasm__binary__module__tests__decode_func_param_result.snap  miniwasm__binary__module__tests__decode_hello_world.snap  miniwasm__binary__module__tests__decode_import.snap  miniwasm__binary__module__tests__decode_memory.snap  miniwasm__binary__module__tests__decode_simplest_func.snap  miniwasm__binary__module__tests__decode_simplest_module.snap  tinywasm__binary__module__tests__decode_data.snap  tinywasm__binary__module__tests__decode_export.snap  tinywasm__binary__module__tests__decode_hello_world.snap  (+1 more)
src/execution/: import.rs  importer.rs  module.rs  runtime.rs  store.rs  value.rs  wasi.rs
src/fixtures/: call.wat  data.wat  export.wat  fib.wat  func.wat  func_add.wat  func_call.wat  func_local.wat  func_lts.wat  func_param_result.wat  func_sub.wat  hello_world.wasm  hello_world.wat  i32_const.wat  i32_store.wat  import.wat  local_set.wat  memory.wat
