[package]
name = "tinywasm"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
nom = "7.1.3"
nom-leb128 = "0.2.0"
num-derive = "0.4.0"
num-traits = "0.2.15"
rand = "0.9.0"

[dev-dependencies]
wat = "=1.0.67"
pretty_assertions = "1.4.0"
